# ratewatch

./: .env.example  .gitignore  ACTION_VERSIONS.md  CHANGELOG.md  CODE_FIXES.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  FINAL_SUMMARY.md  FREE_DEPLOYMENT_GUIDE.md  GITHUB_PERMISSIONS_FIX.md  LICENSE  PHASE1_COMPLETE.md  PHASE2_SECURITY_COMPLETE.md  PRODUCTION_CHECKLIST.md  PRODUCTION_VALIDATION.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  SETUP.md  WORKFLOW_FIXES.md  api_key.txt  config.toml  deny.toml  deploy.sh  docker-compose.prod.yml  docker-compose.yml  final_production_test.py  gdpr_compliance_test.py  production_core_test.py  setup_api_key.sh  test.sh  test_phase1.sh  test_phase2_security.sh  test_phase3_clients.sh  validate.sh
.archive/: COMPLETION_STATUS.md  PHASE3_COMPLETE.md  PHASE3_TEST_REPORT.md
.github/workflows/: ci.yml  deploy.yml  release.yml  security.yml  test.yml
clients/: EXAMPLES.md  test_clients.py
clients/nodejs/: README.md  package-lock.json  package.json  test_client.js  test_client.ts  tsconfig.json
clients/nodejs/src/: index.ts
clients/python/: README.md  setup.py  test_client.py
clients/python/ratewatch/: __init__.py
deploy/: nginx.conf  nginx.prod.conf  ratewatch.service
deploy/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  redis.yaml  secret.yaml  service.yaml  servicemonitor.yaml
docs/: API.md  DEPLOYMENT.md
monitoring/: alertmanager.yml  docker-compose.yml  prometheus.yml
monitoring/grafana/dashboards/: ratewatch-dashboard.json
scripts/: benchmark.sh  ci_local_test.sh  deploy-saas.sh  deploy.sh  generate_api_key.sh  load_test.sh  prepare_release.sh  production-deploy.sh  validate_workflows.sh
src/: analytics.rs  api.rs  auth.rs  health.rs  main.rs  metrics.rs  privacy.rs  rate_limiter.rs
src/audit/: api.rs  audit_event.rs  audit_filter.rs  audit_logger.rs  audit_storage.rs  digital_signer.rs  middleware.rs  mod.rs  tests.rs
src/config/: mod.rs  secrets.rs  sources.rs  validation.rs
src/security/: api.rs  behavioral_analysis.rs  behavioral_analyzer.rs  ip_reputation.rs  middleware.rs  mod.rs  siem_integration.rs  threat_analyzer.rs  threat_detector.rs
src/tenant/: api.rs  isolation.rs  middleware.rs  mod.rs  resource_quota.rs  tenant_config.rs  tenant_manager.rs  tests.rs
static/: dashboard.html
tests/: integration_tests.rs  performance_tests.rs
