[package]
name = "ratewatch"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }
# Web framework
axum = "0.7"
# Redis client
redis = { version = "0.24", features = ["tokio-comp"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# HTTP client for health checks
reqwest = "0.11"
# Environment variables
dotenvy = "0.15"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# Error handling
anyhow = "1.0"
# UUID generation
uuid = { version = "1.0", features = ["v4"] }
# Time handling
chrono = { version = "0.4", features = ["serde"] }
# Cryptographic hashing for API keys
blake3 = "1.5"
# HTTP middleware and utilities
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "set-header", "fs"] }
# Hex encoding for API key hashes
hex = "0.4"
# Prometheus metrics
prometheus = "0.13"
# Lazy static for global metrics
once_cell = "1.19"
