[package]
name = "ratewatch"
version = "1.0.0"
edition = "2021"
authors = ["RateWatch Team"]
description = "High-performance distributed API rate limiting service built with Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ratewatch/ratewatch"
keywords = ["rate-limiting", "api", "redis", "performance", "rust"]
categories = ["web-programming", "network-programming"]

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
# Web framework
axum = "0.7"
# Redis client
redis = { version = "0.24", features = ["tokio-comp"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Environment variables
dotenvy = "0.15"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Error handling
anyhow = "1.0"
# Time handling
chrono = { version = "0.4", features = ["serde"] }
# Cryptographic hashing for API keys
blake3 = "1.5"
# HTTP middleware and utilities
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "set-header", "fs"] }
# Hex encoding for API key hashes
hex = "0.4"
# Prometheus metrics
prometheus = "0.13"
# Lazy static for global metrics
once_cell = "1.19"

[profile.release]
# Optimize for performance and size
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Faster compilation in development
opt-level = 0
debug = true
