[package]
name = "ratewatch"
version = "1.0.0"
edition = "2021"
authors = ["RateWatch Team"]
description = "High-performance distributed API rate limiting service built with Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ratewatch/ratewatch"
keywords = ["rate-limiting", "api", "redis", "performance", "rust"]
categories = ["web-programming", "network-programming"]

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
# Web framework
axum = "0.7"
# Redis client
redis = { version = "0.24", features = ["tokio-comp"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Environment variables
dotenvy = "0.15"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Error handling
anyhow = "1.0"
# Time handling
chrono = { version = "0.4", features = ["serde"] }
# Cryptographic hashing for API keys
blake3 = "1.5"
# HTTP middleware and utilities
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "set-header", "fs"] }
# Hex encoding for API key hashes
hex = "0.4"
# Prometheus metrics
prometheus = "0.14"
# Lazy static for global metrics
once_cell = "1.19"
# Configuration management
config = "0.14"
# Secret management
hashicorp_vault = { version = "2.1", optional = true }
aws-config = { version = "1.1", optional = true }
aws-sdk-secretsmanager = { version = "1.15", optional = true }
azure_security_keyvault = { version = "0.20", optional = true }
# UUID generation
uuid = { version = "1.7", features = ["v4", "serde"] }
# Async traits
async-trait = "0.1"
# Configuration validation
validator = { version = "0.18", features = ["derive"] }
# File watching for config hot-reload
notify = "6.1"
# YAML support for configuration
serde_yaml = "0.9"
# TOML support for configuration
toml = "0.8"
# HMAC for digital signatures
hmac = "0.12"
sha2 = "0.10"
# Constant time comparison for security
constant_time_eq = "0.3"
# Random number generation
rand = "0.8"
# IP address parsing
ipnet = "2.9"

[profile.release]
# Optimize for performance and size
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }

[profile.dev]
# Faster compilation in development
opt-level = 0
debug = true
